# testauskoira-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  award_id_blacklist.txt  blacklist.txt  build.rs  database.sql  docker-compose.yml  entrypoint.sh  self_service_roles.txt
.github/workflows/: deploy.yml  docker-publish.yml
migrations/2022-01-04-144226_initial_migration/: down.sql  up.sql
migrations/2022-01-04-223500_voting_migration/: down.sql  up.sql
migrations/2022-01-09-164332_unsigned_user_ids/: down.sql  up.sql
migrations/2022-01-10-175606_giveaway_migration/: down.sql  up.sql
migrations/2022-01-31-181024_useless_button/: down.sql  up.sql
migrations/2022-02-14-144123_activity_award_winners/: down.sql  up.sql
migrations/2022-02-14-150512_store_silenced_members/: down.sql  up.sql
migrations/2022-02-21-223232_non_unique_winners/: down.sql  up.sql
migrations/2022-02-26-175659_non_unique_awardees_real/: down.sql  up.sql
migrations/2022-03-17-141428_vote_feature/: down.sql  up.sql
migrations/2022-03-30-144347_non_unique_vote_channel/: down.sql  up.sql
migrations/2022-03-31-190905_actually_not_unique_channels/: down.sql  up.sql
src/: extensions.rs  main.rs  models.rs  scheduled.rs  schema.rs  voting.rs  webserver.rs
src/api/: mod.rs  webserver.rs
src/commands/: giveaway.rs  links.rs  mod.rs  owner.rs  role.rs  vote.rs
src/database/: giveaway.rs  mail.rs  message_logging.rs  mod.rs  vote.rs  voting.rs
src/events/: activity_award.rs  giveaway_updater.rs  mod.rs
src/utils/: build_award.rs  giveaway_updater.rs  mod.rs  winner_showcase.rs
