[package]
name = "testauskoira-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway","standard_framework", "rustls_backend", "model","framework", "unstable_discord_api"]

[dependencies.tokio]
version = "1.13"
features = ["macros", "rt-multi-thread","signal"]

[dependencies.sqlx]
version = "0.5"
features = ["mysql","runtime-tokio-rustls","bigdecimal"]

[dependencies]
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

actix-web = "4.0.0-beta"
actix-rt = "2.3"
oauth2 = {version = "4.1", features = ["curl"]}
reqwest = {version = "0.11", features = ["rustls-tls","json"]}

serde = "1.0"
serde_derive = "1.0"

regex = {version = "1.5", features = ["default"]}
dotenv = "0.15"
futures = "0.3"
num-traits = "0.2"
rand = "0.8"
photon-rs = "0.3"
rustls = "0.20"
clokwerk = "0.3.5"
chrono = "0.4"
