[package]
name = "testauskoira-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["cache", "client", "gateway","standard_framework", "rustls_backend", "model","framework", "unstable_discord_api"]

[dependencies.tokio]
version = "1.13"
features = ["macros", "rt-multi-thread","signal"]

[dependencies.diesel]
version = "1.4"
features = ["mysql","chrono", "r2d2"]

[dependencies.openssl-sys]
version = "0.9.71"
features = ["vendored"]

[dependencies]
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

serde = "1.0"
serde_derive = "1.0"

reqwest = "0.11"
rustls = "0.20"

regex = {version = "1.5", features = ["default"]}
dotenv = "0.15"
futures = "0.3"
num-traits = "0.2"
rand = "0.8"
clokwerk = "0.3.5"
chrono = "0.4"
anyhow = "1.0"
image = "0.23"
